# CeCe-core

./: .clang_complete  .travis.yml  CHANGELOG.md  CMakeLists.txt  appveyor.yml
CMake/: Functions.cmake
cece/: CMakeLists.txt
cece/core/: CMakeLists.txt  DataExportCsvFactory.hpp  StringView.hpp
cece/init/: FactoryManager.hpp
cece/loader/: Loader.hpp
cece/module/: FactoryManager.hpp
cece/plugin/: Api.cpp  Api.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Exception.cpp  Exception.hpp  Library.cpp  LibraryLoader.cpp  LibraryLoader.hpp  Loader.cpp  Loader.hpp  Manager.cpp  Manager.hpp  Plugin.cpp  Plugin.hpp  Repository.cpp  Repository.hpp  RepositoryRecord.hpp  SharedLibrary.cpp  SharedLibrary.hpp  SharedLibraryLoader.cpp  SharedLibraryLoader.hpp  definition.hpp
cece/plugin/test/: Manager.cpp  ManagerTest.cpp  TestPlugin.cpp
cece/plugin/test/plugins/: InvalidPlugin.cpp  OldPlugin.cpp
cece/render/: CMakeLists.txt
cece/simulator/: DefaultSimulation.cpp  Simulation.cpp
include/cece/: AlignedAllocator.hpp  Assert.hpp  DynamicArray.hpp  Exception.hpp  Function.hpp  IntegerSequence.hpp  IteratorRange.hpp  Map.hpp  Pair.hpp  Parameters.hpp  PtrContainer.hpp  PtrDynamicArray.hpp  PtrNamedContainer.hpp  PtrStringMap.hpp  Range.hpp  Set.hpp  SharedPtr.hpp  StaticArray.hpp  String.hpp  StringMap.hpp  StringView.hpp  Tuple.hpp  UniquePtr.hpp  ValueIterator.hpp  ViewPtr.hpp  common.hpp
include/cece/async/: Atomic.hpp  Mutex.hpp
include/cece/config/: Configuration.hpp  Converter.hpp  ConverterSpec.hpp  Convertor.hpp  Exception.hpp  Implementation.hpp  MemoryImplementation.hpp
include/cece/core/: AlignedAllocator.hpp  Assert.hpp  Atomic.hpp  BinaryInput.hpp  BinaryOutput.hpp  CliColor.hpp  CsvFile.hpp  DataExport.hpp  DataExportCsv.hpp  DataExportCsvFactory.hpp  DataExportFactory.hpp  Grid.hpp  (+50 more)
scripts/: shader-convert.py
src/: AlignedAllocator.cpp  CMakeLists.txt  Parameters.cpp  String.cpp  config.hpp.in  version.hpp.in
src/config/: CMakeLists.txt  Configuration.cpp  Exception.cpp  MemoryImplementation.cpp  MemoryImplementation.hpp
src/core/: CMakeLists.txt  CsvFile.cpp  DataExportCsv.cpp  DataExportCsvFactory.cpp  ExpressionParser.cpp  FilePath.cpp  Log.cpp  TimeMeasurement.cpp  UnitIo.cpp
src/init/: CMakeLists.txt  Container.cpp  Initializer.cpp
src/io/: CMakeLists.txt  CliColor.cpp  Converter.cpp  CsvFile.cpp  DataExport.cpp  DataExportCsv.cpp  DataExportCsvFactory.cpp  DataExportFactory.cpp  FilePath.cpp
src/lang/: CMakeLists.txt  ExpressionParser.cpp
src/loader/: CMakeLists.txt  Loader.cpp
src/log/: CMakeLists.txt  FileOutput.cpp  Log.cpp  Logger.cpp  Output.cpp  StdOutput.cpp  StreamOutput.cpp
src/math/: CMakeLists.txt  Grid.cpp  Vector.cpp  Vector2.cpp  Vector3.cpp
src/module/: CMakeLists.txt  Container.cpp  ExportModule.cpp  Factory.cpp  FactoryManager.cpp  Module.cpp
src/object/: CMakeLists.txt  Container.cpp  Factory.cpp  FactoryManager.cpp  Object.cpp
src/os/: CMakeLists.txt  SharedLibrary.cpp
src/perf/: CMakeLists.txt  TimeMeasurement.cpp
src/plugin/: Api.cpp  CMakeLists.txt  Context.cpp  Exception.cpp  Manager.cpp  Plugin.cpp  Repository.cpp  RepositoryRecord.cpp  SharedLibrary.cpp  SharedLibraryLoader.cpp
src/program/: CMakeLists.txt  Container.cpp
src/render/: Buffer.cpp  CMakeLists.txt  Circle.cpp  Color.cpp  Context.cpp  Grid.cpp  GridColor.cpp  GridVector.cpp  Image.cpp  Lines.cpp  Program.cpp  Shader.cpp  Texture.cpp  errors.cpp
src/simulation/: CMakeLists.txt  ConverterBox2D.cpp  ConverterBox2D.hpp  DefaultSimulation.cpp  ExportModule.cpp  Initializer.cpp  InitializerContainer.cpp  InitializerFactory.cpp  InitializerFactoryManager.cpp  Loader.cpp  LoaderFactory.cpp  LoaderFactoryManager.cpp  Module.cpp  ModuleContainer.cpp  ModuleFactory.cpp  ModuleFactoryManager.cpp  Object.cpp  ObjectBoundData.cpp  ObjectContactListener.cpp  ObjectContainer.cpp  ObjectFactory.cpp  ObjectFactoryManager.cpp  ObjectTypeContainer.cpp  ProgramContainer.cpp  ProgramFactory.cpp  ProgramFactoryManager.cpp  ProgramNamedContainer.cpp  Simulation.cpp  Simulator.cpp  TimeMeasurement.cpp  Visualization.cpp
src/simulator/: CMakeLists.txt  ConverterBox2D.cpp  DefaultSimulation.cpp  Simulation.cpp  Simulator.cpp  TimeMeasurement.cpp
src/unit/: CMakeLists.txt  Unit.cpp  UnitIo.cpp  Units.cpp  VectorUnits.cpp
unittests/: AlignedAllocatorTest.cpp  CMakeLists.txt  DynamicArrayTest.cpp  IteratorRangeTest.cpp  MapTest.cpp  ParametersTest.cpp  PtrContainerTest.cpp  PtrDynamicArrayTest.cpp  PtrStringMapTest.cpp  SharedPtrTest.cpp  StringMapTest.cpp  StringTest.cpp  StringViewTest.cpp  UniquePtrTest.cpp  ViewPtrTest.cpp
unittests/config/: CMakeLists.txt  ConfigurationTest.cpp  ExceptionTest.cpp
unittests/core/: AlignedAllocatorTest.cpp  CMakeLists.txt  DynamicArrayTest.cpp  ExpressionParserTest.cpp  FilePathTest.cpp  IteratorRangeTest.cpp  ParametersTest.cpp  PtrContainerTest.cpp  StringViewTest.cpp  TokenizerTest.cpp  UnitsTest.cpp  VectorRangeTest.cpp  VectorTest.cpp  VectorUnitsTest.cpp  ViewPtrTest.cpp
unittests/io/: CMakeLists.txt  FilePathTest.cpp
unittests/lang/: CMakeLists.txt  ExpressionParserTest.cpp  TokenizerTest.cpp
unittests/log/: CMakeLists.txt  FileOutputTest.cpp  LogTest.cpp  LoggerTest.cpp  OutputTest.cpp  StdOutputTest.cpp  StreamOutputTest.cpp
unittests/math/: CMakeLists.txt  Vector2_test.cpp  Vector3_test.cpp  VectorBase_test.cpp  VectorIo_test.cpp  VectorRangeTest.cpp  Vector_test.cpp
unittests/os/: CMakeLists.txt  SharedLibraryTest.cpp
unittests/os/libraries/: Library1.cpp
unittests/plugin/: ApiTest.cpp  CMakeLists.txt  ContextTest.cpp  ManagerTest.cpp  PluginTest.cpp  RepositoryRecordTest.cpp  RepositoryTest.cpp
unittests/plugin/plugins/: DifferentRealPlugin.cpp  NoConfigPlugin.cpp  NoCreatePlugin.cpp  NotRenderPlugin.cpp  NotThreadSafePlugin.cpp  OldPlugin.cpp  TestPlugin.cpp  ThrowPlugin.cpp
unittests/render/: CMakeLists.txt  ColorTest.cpp
unittests/unit/: CMakeLists.txt  UnitIo_test.cpp  UnitTest.cpp  Unit_test.cpp  UnitsCtors_test.cpp  UnitsTest.cpp  Units_test.cpp  VectorUnitsTest.cpp  math_test.cpp
(+147 files in other folders)
